--- a/src/Components/homeSection7/homeSection7.css
+++ b/src/Components/homeSection7/homeSection7.css
@@ -95,6 +95,6 @@
         margin-top: 4rem;
         padding: 0 4rem;
         padding-top: 2rem;
-        text-align: center;
+        text-align: left;
     }
 }
