--- a/src/Components/transparentButton/transparentbutton.css
+++ b/src/Components/transparentButton/transparentbutton.css
@@ -2,6 +2,7 @@
     font-size: 20px;
     font-style: Medium;
     background-color: transparent;
+    border-style: solid;
     border-radius: 4px;
     margin: 10px 0;
     padding: 10px;
