--- a/src/Components/form/form.css
+++ b/src/Components/form/form.css
@@ -21,6 +21,16 @@
     border-style: solid;
     margin: .5rem 1rem;
     border-radius: 3px;
+    width: 90%;
+}
+
+.error {
+    padding: 1rem;
+    padding-top: 0;
+    margin: .2rem 1rem;
+    margin-top: 0;
+    width: 90%;
+    color: red;
 }
 
 
