--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -49,6 +49,7 @@
         align-items: center;
         padding: 2rem;
         padding-left: 5rem;
+        margin: 2rem 2rem;
     }
     .footer p {
         font-size: 1rem;
