--- a/src/Components/form/form.css
+++ b/src/Components/form/form.css
@@ -43,7 +43,8 @@
     font-size: 21px;
     font-weight: 500;
     padding: 1rem;
-    margin: .5rem 1rem;;
+    margin: .5rem 1rem;
+    width: 90%;
 }
 @media only screen and (max-width: 600px) {
     .form {
