--- a/src/Components/blackButton/blackbutton.css
+++ b/src/Components/blackButton/blackbutton.css
@@ -7,6 +7,8 @@
     cursor: pointer;
     margin: 0;
     padding: 0 1rem;
+    outline: none;
+    border: none;
 }
 
 @media only screen and (max-width: 600px) {
